--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "compression": "^1.7.4",
+    "dotenv": "^16.3.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0"
   }
