--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.1.0",
-    "nvm": "^0.0.4"
+    "nvm": "^0.0.4",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "compression": "^1.7.4",
