--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@redis/client": "^1.5.14",
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
@@ -18,6 +19,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.1.0",
     "nvm": "^0.0.4",
+    "redis": "^4.6.13",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
