--- a/ecommerce-backend/package.json
+++ b/ecommerce-backend/package.json
@@ -20,6 +20,7 @@
     "kafkajs": "^2.2.4",
     "lodash": "^4.17.21",
     "mongoose": "^8.1.0",
+    "mysql2": "^3.10.0",
     "nvm": "^0.0.4",
     "redis": "^4.6.13",
     "slugify": "^1.6.6"
