--- a/ecommerce-backend/package.json
+++ b/ecommerce-backend/package.json
@@ -15,6 +15,7 @@
     "amqplib": "^0.10.4",
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
+    "discord.js": "^14.15.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
