--- a/ecommerce-backend/package.json
+++ b/ecommerce-backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.598.0",
     "@redis/client": "^1.5.14",
     "amqplib": "^0.10.4",
     "bcrypt": "^5.1.1",
@@ -21,6 +22,7 @@
     "kafkajs": "^2.2.4",
     "lodash": "^4.17.21",
     "mongoose": "^8.1.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.0",
     "nvm": "^0.0.4",
     "redis": "^4.6.13",
