--- a/ecommerce-backend/package.json
+++ b/ecommerce-backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.598.0",
+    "@aws-sdk/s3-request-presigner": "^3.598.0",
     "@redis/client": "^1.5.14",
     "amqplib": "^0.10.4",
     "bcrypt": "^5.1.1",
