--- a/ecommerce-backend/package.json
+++ b/ecommerce-backend/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js",
+    "debug": "nodemon --inspect server.js"
   },
   "keywords": [],
   "author": "",
@@ -27,7 +28,8 @@
     "mysql2": "^3.10.0",
     "nvm": "^0.0.4",
     "redis": "^4.6.13",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "compression": "^1.7.4",
