--- a/ecommerce-backend/package.json
+++ b/ecommerce-backend/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.1.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.0",
+    "nodemailer": "^6.9.14",
     "nvm": "^0.0.4",
     "redis": "^4.6.13",
     "slugify": "^1.6.6",
